@@ -1,3 +1,11 @@
+## 20210331
+
+- docker-compose版本升级为1.28.6
+- istio版本升级到1.9.2
+- getistio版本升级到v1.0.5
+- osm版本升级为0.8.2
+- k0s版本升级为0.12.0
+
 ## 20210322
 
 - k8s版本升级为1.18.17
